# swagger.yaml
@@ -96,6 +96,50 @@ paths:
         '200':
           description: Usuario eliminado
 
+  /register:
+    post:
+      summary: Registrar usuario
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                nombre:
+                  type: string
+                email:
+                  type: string
+                password:
+                  type: string
+
+      responses:
+        '201':
+          description: Usuario registrado correctamente
+
+  /login:
+    post:
+      summary: Iniciar sesión
+
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                email:
+                  type: string
+                password:
+                  type: string
+
+      responses:
+        '200':
+          description: Login exitoso
+
+        '401':
+          description: Credenciales incorrectas
+
   /reservas:
     get:
       summary: Obtener reservas
